objects/sfal__AppointmentAttendee__c.object
<CustomObject>
    <description>A meeting participant, such as an advisor or advisee.</description>
    <fields>
        <fullName>Attendee_Email__c</fullName>
        <description>Used to capture the users, Attendee&apos;s, email only because student records are inactive and the system does not send email alerts to inactive users. This is a work around that limit.</description>
        <label>Attendee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Meeting_Date_Time_Frm__c</fullName>
        <formula>sfal__Appointment__r.sfal__StartDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfal__AdviseeRecord__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>If the Attendee User is an advisee Contact, lookup to the advisee record Case associated with the Contact.</description>
        <label>Advisee Record</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>AppointmentAttendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfal__Appointment__c</fullName>
        <description>Lookup to the related Appointment.</description>
        <label>Appointment</label>
        <referenceTo>sfal__Appointment__c</referenceTo>
        <relationshipLabel>Appointment Attendees</relationshipLabel>
        <relationshipName>Appointment_Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfal__Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related User.</description>
        <label>Attendee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AppointmentAttendance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfal__Comments__c</fullName>
        <description>Comments provided by the attendee about what the appointment is about.</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__Role__c</fullName>
        <description>The Appointment Attendee&apos;s role.</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attendee</fullName>
                    <default>true</default>
                    <label>Attendee</label>
                </value>
                <value>
                    <fullName>Organizer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfal__StatusComments__c</fullName>
        <description>Details about why the Appointment was cancelled.</description>
        <label>Status Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__StatusUpdatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who initiated the last Status update.</description>
        <label>Status Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AppointmentAttendancesUpdated</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfal__StatusUpdatedDate__c</fullName>
        <description>Who initiated the last Status update.</description>
        <label>Status Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfal__Status__c</fullName>
        <description>The Appointment Attendee&apos;s attendance status.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attending</fullName>
                    <default>true</default>
                    <label>Attending</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Checked In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Appointment Attendee</label>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Appointment Attendee</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>